--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.300.0",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "prisma": "^5.7.1",
